[gd_scene load_steps=11 format=3 uid="uid://dj2invdrna8pq"]

[ext_resource type="Texture2D" uid="uid://c6dvqhkaoxfrd" path="res://assets/light.webp" id="1_aupgq"]
[ext_resource type="PackedScene" uid="uid://c2g1xhq21x1mf" path="res://main-menu/background.tscn" id="2_3ibxd"]
[ext_resource type="TileSet" uid="uid://ofabqlexnqyd" path="res://assets/tilemap.tres" id="3_fp4xt"]
[ext_resource type="Script" path="res://level/world2/level2.gd" id="4_6a04k"]
[ext_resource type="Script" path="res://level/visual_timer.gd" id="5_q2llm"]
[ext_resource type="FontFile" uid="uid://btk6lr8r58ga0" path="res://assets/ui/gomarice_mix_bit_font.ttf" id="6_8i1qd"]
[ext_resource type="Texture2D" uid="uid://byoqcw8nvyldr" path="res://assets/star_locked.png" id="7_frkiq"]
[ext_resource type="TileSet" uid="uid://bjrktsba7geda" path="res://assets/border.tres" id="8_nu4va"]
[ext_resource type="Script" path="res://level/stoppuhr.gd" id="9_5flna"]
[ext_resource type="PackedScene" uid="uid://h2dqw4dt0jx3" path="res://assets/ui/settings.tscn" id="10_7otap"]

[node name="Level2-2" type="Node2D"]

[node name="Light" type="PointLight2D" parent="."]
position = Vector2(1357.25, 9.45999)
scale = Vector2(0.279298, 0.254219)
energy = 0.28
shadow_enabled = true
texture = ExtResource("1_aupgq")

[node name="Background" parent="." instance=ExtResource("2_3ibxd")]

[node name="lvl2_1" type="TileMap" parent="."]
position = Vector2(163, 8)
scale = Vector2(0.7, 0.7)
tile_set = ExtResource("3_fp4xt")
rendering_quadrant_size = 32
navigation_visibility_mode = 1
format = 2
layer_0/name = "base"
layer_1/name = "player"
layer_1/tile_data = PackedInt32Array(3, 10, 0, 2, 10, 0, 1, 10, 0, 0, 10, 0, 65536, 10, 0, 131072, 10, 0, 196608, 10, 0, 262144, 10, 0, 327680, 10, 0, 393216, 10, 0, 458752, 10, 0, 524288, 10, 0, 589824, 10, 0, 655360, 10, 0, 720896, 10, 0, 720897, 10, 0, 720898, 10, 0, 720899, 10, 0, 720900, 10, 0, 4, 10, 0, 5, 10, 0, 6, 10, 0, 7, 10, 0, 8, 10, 0, 9, 10, 0, 10, 10, 0, 11, 10, 0, 12, 10, 0, 13, 10, 0, 14, 10, 0, 15, 10, 0, 16, 10, 0, 17, 10, 0, 18, 10, 0, 19, 10, 0, 20, 10, 0, 21, 10, 0, 22, 10, 0, 23, 10, 0, 24, 10, 0, 25, 10, 0, 26, 10, 0, 27, 10, 0, 28, 10, 0, 29, 10, 0, 30, 10, 0, 31, 10, 0, 65567, 10, 0, 131103, 10, 0, 196639, 10, 0, 262175, 10, 0, 327711, 10, 0, 393247, 10, 0, 458783, 10, 0, 524319, 10, 0, 589855, 10, 0, 655391, 10, 0, 720927, 10, 0, 720926, 10, 0, 720925, 10, 0, 720924, 10, 0, 720923, 10, 0, 786436, 10, 0, 851972, 10, 0, 917508, 10, 0, 983044, 10, 0, 1048580, 10, 0, 1114116, 10, 0, 1114115, 10, 0, 1114114, 10, 0, 1114113, 10, 0, 1114112, 10, 0, 1179648, 10, 0, 1245184, 10, 0, 1310720, 10, 0, 1376256, 10, 0, 1441792, 10, 0, 1507328, 10, 0, 1572864, 10, 0, 1638400, 10, 0, 1703936, 10, 0, 1769472, 10, 0, 1769473, 10, 0, 1769474, 10, 0, 1769475, 10, 0, 1769476, 10, 0, 1769477, 10, 0, 1769478, 10, 0, 1769479, 10, 0, 1769480, 10, 0, 1769481, 10, 0, 1769482, 10, 0, 1769483, 10, 0, 1769484, 10, 0, 1769485, 10, 0, 1769486, 10, 0, 1769487, 10, 0, 1769488, 10, 0, 1769489, 10, 0, 1769490, 10, 0, 1769491, 10, 0, 1769492, 10, 0, 1769493, 10, 0, 1769494, 10, 0, 1769495, 10, 0, 1769496, 10, 0, 1769497, 10, 0, 1769498, 10, 0, 1769499, 10, 0, 1769500, 10, 0, 1769501, 10, 0, 1769502, 10, 0, 1769503, 10, 0, 1114143, 10, 0, 1114142, 10, 0, 1114141, 10, 0, 1114140, 10, 0, 1114139, 10, 0, 1048603, 10, 0, 983067, 10, 0, 917531, 10, 0, 786459, 10, 0, 851995, 10, 0, 1179679, 10, 0, 1245215, 10, 0, 1310751, 10, 0, 1376287, 10, 0, 1441823, 10, 0, 1507359, 10, 0, 1572895, 10, 0, 1638431, 10, 0, 1703967, 10, 0, 720910, 10, 0, 786446, 10, 0, 851982, 10, 0, 917518, 10, 0, 983054, 10, 0, 1048590, 10, 0, 1114126, 10, 0, 720913, 10, 0, 786449, 10, 0, 851985, 10, 0, 917521, 10, 0, 983057, 10, 0, 1048593, 10, 0, 1114129, 10, 0, 720911, 10, 0, 720912, 10, 0, 1114127, 10, 0, 1114128, 10, 0, 720905, 10, 0, 786441, 10, 0, 851977, 10, 0, 917513, 10, 0, 983049, 10, 0, 1048585, 10, 0, 1114121, 10, 0, 720918, 10, 0, 786454, 10, 0, 851990, 10, 0, 917526, 10, 0, 983062, 10, 0, 1048598, 10, 0, 1114134, 10, 0)
script = ExtResource("4_6a04k")

[node name="Fog" type="CanvasModulate" parent="."]
visible = false
color = Color(0, 0, 0, 1)

[node name="Belichtet" type="CanvasLayer" parent="."]

[node name="visual_timer" type="Node" parent="Belichtet"]
script = ExtResource("5_q2llm")

[node name="time" type="Label" parent="Belichtet/visual_timer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 939.0
offset_top = 234.5
offset_right = -82.0
offset_bottom = -371.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("6_8i1qd")
theme_override_font_sizes/font_size = 41
text = "00:00"
metadata/_edit_use_anchors_ = true

[node name="Timer" type="Timer" parent="Belichtet/visual_timer"]
wait_time = 10.0
one_shot = true
autostart = true

[node name="Star" type="Sprite2D" parent="Belichtet"]
position = Vector2(1004, 546)
scale = Vector2(4, 4)
texture = ExtResource("7_frkiq")

[node name="Border" type="TileMap" parent="Belichtet"]
visible = false
position = Vector2(240, 51)
scale = Vector2(0.9, 0.9)
tile_set = ExtResource("8_nu4va")
rendering_quadrant_size = 32
format = 2
layer_0/tile_data = PackedInt32Array(1245191, 0, 1342177280, 1245192, 0, 1342177280, -65527, 0, 1610612736, -65526, 0, 1610612736, -65525, 0, 1610612736, 1245195, 0, 1342177280, -65524, 0, 1610612736, 1245196, 0, 1342177280, -65523, 0, 1610612736, 1245197, 0, 1342177280, -65522, 0, 1610612736, 1245198, 0, 1342177280, -65521, 0, 1610612736, 1245199, 0, 1342177280, -65520, 0, 1610612736, 1245200, 0, 1342177280, 262146, 0, 805306368, 327682, 0, 805306368, 393218, 0, 805306368, 458754, 0, 805306368, 524290, 0, 805306368, 589826, 0, 805306368, 655362, 0, 805306368, 720898, 0, 805306368, 786434, 0, 805306368, 851970, 0, 805306368, 917506, 0, 805306368, 196611, 1, 805306368, 983043, 1, 1342177280, 131076, 1, 805306368, 1048580, 1, 1342177280, 65541, 1, 805306368, 1114117, 1, 1342177280, 6, 1, 805306368, 1179654, 1, 1342177280, -65529, 0, 1610612736, 1245193, 0, 1342177280, -65519, 0, 1610612736, 1245201, 0, 1342177280, 18, 1, 1610612736, 1179666, 1, 0, 65555, 1, 1610612736, 1114131, 1, 0, 131092, 1, 1610612736, 1048596, 1, 0, 196629, 1, 1610612736, 983061, 1, 0, 262166, 0, 0, 327702, 0, 0, 393238, 0, 0, 458774, 0, 0, 524310, 0, 0, 589846, 0, 0, 655382, 0, 0, 720918, 0, 0, 786454, 0, 0, 851990, 0, 0, 917526, 0, 0)

[node name="light_out_in" type="Label" parent="Belichtet"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 902.0
offset_top = 206.0
offset_right = 173.0
offset_bottom = -391.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
size_flags_horizontal = 4
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("6_8i1qd")
theme_override_font_sizes/font_size = 50
text = "Lights out in :"
metadata/_edit_use_anchors_ = true

[node name="gebrauchte_zeit" type="Label" parent="Belichtet"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 897.0
offset_top = 35.0
offset_right = 182.0
offset_bottom = -562.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
size_flags_horizontal = 4
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("6_8i1qd")
theme_override_font_sizes/font_size = 50
text = "required Time:"
metadata/_edit_use_anchors_ = true

[node name="stoppuhr" type="Node" parent="Belichtet"]
script = ExtResource("9_5flna")

[node name="label" type="Label" parent="Belichtet/stoppuhr"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 942.5
offset_top = 64.5
offset_right = -78.5
offset_bottom = -541.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("6_8i1qd")
theme_override_font_sizes/font_size = 41
text = "00:00"
metadata/_edit_use_anchors_ = true

[node name="Highscore" type="Label" parent="Belichtet"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 896.0
offset_top = 121.0
offset_right = 181.0
offset_bottom = -476.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
size_flags_horizontal = 4
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("6_8i1qd")
theme_override_font_sizes/font_size = 50
text = "    Highscore"
metadata/_edit_use_anchors_ = true

[node name="HighScoreTime" type="Label" parent="Belichtet"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 943.0
offset_top = 144.0
offset_right = -75.0
offset_bottom = -459.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("6_8i1qd")
theme_override_font_sizes/font_size = 41
text = "00:00"
metadata/_edit_use_anchors_ = true

[node name="Settings" parent="Belichtet" instance=ExtResource("10_7otap")]
visible = false
offset_left = 150.0
offset_top = 340.0
offset_right = -788.0
offset_bottom = -45.0
scale = Vector2(0.3, 0.3)
metadata/_edit_use_anchors_ = true
